# SC4001-NLarge

./: .gitignore  README.md  gen_data_augment.ipynb  nb.ipynb  pyproject.toml  random_words.ipynb  synonym.ipynb
.github/workflows/: python-publish.yml
NLarge/: llm.py  log.txt  random.py
NLarge-webapp/: README.md  package-lock.json  package.json
NLarge-webapp/src/app/: globals.css  layout.tsx  page.tsx
NLarge-webapp/src/app/documentation/: layout.tsx  page.tsx
NLarge-webapp/src/app/documentation/examples/llm/: page.tsx
NLarge-webapp/src/app/documentation/examples/random/: page.tsx
NLarge-webapp/src/app/documentation/examples/synonym/: page.tsx
NLarge-webapp/src/app/documentation/helper/: page.tsx
NLarge-webapp/src/app/documentation/installation/: page.tsx
NLarge-webapp/src/app/documentation/models/: page.tsx
NLarge-webapp/src/app/documentation/usage/: page.tsx
NLarge-webapp/src/components/: color-schemes-switcher.tsx  documentation.tsx  navbar.tsx
example/: dataset_concat.py  demo.ipynb  perf_for_hybrid.ipynb  perf_for_llm.ipynb  perf_for_random.ipynb  perf_for_synonym.ipynb  rnn_for_llm.ipynb  rnn_for_random.ipynb  rnn_for_synonym.ipynb  rnn_for_testing.ipynb  rnn_pipeline.py
report/: bibliography.bib  report.tex
utils/: words.py
