[tool.poetry]
name = "sc4002"
version = "0.1.0"
description = ""
authors = ["HiIAmTzeKean <ngtzekean@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.29.5"
numpy = "^2.1.2"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
