[tool.poetry]
name = "sc4002"
version = "0.1.0"
description = ""
authors = ["HiIAmTzeKean <ngtzekean@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.29.5"
numpy = "^1.18.5"
pandas = "^2.2.3"
nltk = "^3.9.1"
gensim = "^4.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
